[Home]

Summary:ASTERISK-28616: parking: Deadlock when multi call parking
Reporter:Joshua C. Colp (jcolp)Labels:
Date Opened:2019-11-12 05:02:21.000-0600Date Closed:2019-11-14 14:56:40.000-0600
Priority:MajorRegression?No
Status:Closed/CompleteComponents:Resources/res_parking
Versions:13.29.1 16.6.1 17.0.0 Frequency of
Occurrence
Related
Issues:
Environment:Attachments:
Description:In certain situations it is possible for a deadlock to occur with parking where a bridge is locked and then a channel is retrieved, while another thread has the channels container locked and is trying to get the bridge.
Comments:By: Friendly Automation (friendly-automation) 2019-11-14 14:56:41.489-0600

Change 13173 merged by Friendly Automation:
parking: Use channel snapshot instead of channel.

[https://gerrit.asterisk.org/c/asterisk/+/13173|https://gerrit.asterisk.org/c/asterisk/+/13173]

By: Friendly Automation (friendly-automation) 2019-11-14 15:05:53.791-0600

Change 13193 merged by Friendly Automation:
parking: Use channel snapshot instead of channel.

[https://gerrit.asterisk.org/c/asterisk/+/13193|https://gerrit.asterisk.org/c/asterisk/+/13193]

By: Friendly Automation (friendly-automation) 2019-11-14 17:24:07.780-0600

Change 13195 merged by George Joseph:
parking: Use channel snapshot instead of channel.

[https://gerrit.asterisk.org/c/asterisk/+/13195|https://gerrit.asterisk.org/c/asterisk/+/13195]

By: Friendly Automation (friendly-automation) 2019-11-14 17:24:48.145-0600

Change 13194 merged by George Joseph:
parking: Use channel snapshot instead of channel.

[https://gerrit.asterisk.org/c/asterisk/+/13194|https://gerrit.asterisk.org/c/asterisk/+/13194]

By: Friendly Automation (friendly-automation) 2019-11-14 22:02:57.372-0600

Change 13192 merged by Friendly Automation:
parking: Use channel snapshot instead of channel.

[https://gerrit.asterisk.org/c/asterisk/+/13192|https://gerrit.asterisk.org/c/asterisk/+/13192]

By: Friendly Automation (friendly-automation) 2019-11-14 22:09:48.818-0600

Change 13191 merged by Friendly Automation:
parking: Use channel snapshot instead of channel.

[https://gerrit.asterisk.org/c/asterisk/+/13191|https://gerrit.asterisk.org/c/asterisk/+/13191]

By: Friendly Automation (friendly-automation) 2019-11-18 15:22:58.619-0600

Change 13179 merged by Friendly Automation:
parking: Fix case where we can't get the parker.

[https://gerrit.asterisk.org/c/asterisk/+/13179|https://gerrit.asterisk.org/c/asterisk/+/13179]

By: Friendly Automation (friendly-automation) 2019-11-19 09:25:56.044-0600

Change 13211 merged by George Joseph:
parking: Fix case where we can't get the parker.

[https://gerrit.asterisk.org/c/asterisk/+/13211|https://gerrit.asterisk.org/c/asterisk/+/13211]

By: Friendly Automation (friendly-automation) 2019-11-19 09:26:18.071-0600

Change 13178 merged by George Joseph:
parking: Fix case where we can't get the parker.

[https://gerrit.asterisk.org/c/asterisk/+/13178|https://gerrit.asterisk.org/c/asterisk/+/13178]

By: Friendly Automation (friendly-automation) 2019-11-19 09:26:51.505-0600

Change 13208 merged by George Joseph:
parking: Fix case where we can't get the parker.

[https://gerrit.asterisk.org/c/asterisk/+/13208|https://gerrit.asterisk.org/c/asterisk/+/13208]

By: Friendly Automation (friendly-automation) 2019-11-19 09:27:19.171-0600

Change 13209 merged by George Joseph:
parking: Fix case where we can't get the parker.

[https://gerrit.asterisk.org/c/asterisk/+/13209|https://gerrit.asterisk.org/c/asterisk/+/13209]

By: Friendly Automation (friendly-automation) 2019-11-19 09:27:49.124-0600

Change 13210 merged by George Joseph:
parking: Fix case where we can't get the parker.

[https://gerrit.asterisk.org/c/asterisk/+/13210|https://gerrit.asterisk.org/c/asterisk/+/13210]